--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@ body{
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    background-color: #43543c ;
+    background-image: url(bg.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-size: 100% 100%;
     color: white ;
 }
 
@@ -29,7 +33,7 @@ header{
     left: 0;
     width: 100%;
     padding: 1rem 9%;
-    background-color: #202a1c;
+    background-color: #194945;
     filter: drop-shadow(10px);
     display: flex;
     justify-content: space-between;
@@ -92,6 +96,8 @@ nav a:hover{
     }
 }
 
+
+
 section{
     min-height: 100vh;
     padding: 5rem 9% 5rem;
@@ -102,23 +108,16 @@ section{
     justify-content: center;
     align-items: center;
     gap: 8rem;
-    background-color: #43543c;
 }
-
 .home .home-content h1{
     font-size: 6rem;
     font-weight: 700;
     line-height: 1.3;
+    position: relative;
 }
 
 span{
-    color: #b1c3b8 ;
-}
-
-.home-content h3{
-    font-size: 4rem;
-    margin-bottom: 1rem;
-    font-weight: 700;
+    color: #b7fcf6 ;
 }
 
 .home-content p{
@@ -129,7 +128,7 @@ span{
     display: flex;
     align-items: center;
     gap: 8rem;
-    background-color: #43543c;
+    background-color: #42847f;
 }
 .content h1{
     font-size: 6rem;
